Fixed hero alignment

--- a/resources/style.css
+++ b/resources/style.css
@@ -26,26 +26,26 @@ h4 {
   text-align: center;
 }
 
-.heading {
+.hero {
   margin: 40px;
   background-color: var(--secondary-color);
   padding: 60px;
   border-radius: 40px;
 }
 
-.heading p {
+.hero p {
   font-size: 42px;
   padding-left: 40px;
   margin-bottom: 0;
   font-weight: bold;
 }
 
-.heading h2 {
+.hero h2 {
   padding-left: 110px;
   font-size: 36px;
 }
 
-.heading h3 {
+.hero h3 {
   font-size: 20px;
   padding-left: 45px;
   padding-top: 25px;
